# SakoEngine

./: .dir-locals.el  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  REMINDME.txt  TODO.md  TODO.org  buildmakefile.bat  flake.nix  meson.build  sakoengine.c  shell.nix  todo.org
.github/workflows/: nix-flake-lock.yml
Engine/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h  sakoengine.cpp  sakoengine.h  window.cpp  window.h  window.hpp
Engine/Debug/: Logging.h
Pshyciks/: CMakeLists.txt  main.cpp
assets/: meson.build
cmake/: FindGLFW3.cmake  windows.cmake
doc/: build.md
lib/: CMakeLists.txt
nix/: sdl3.nix
src/: CMakeLists.txt  main.cpp  meson.build  what.glsl
