set(SDL_TEST OFF)
# broken x11 for some reason
set(SDL_X11 OFF)
add_subdirectory(SDL)

add_subdirectory(SDL_image)

set(SDL3IMAGE_AVIF OFF)
set(SDL3IMAGE_BMP OFF)
set(SDL3IMAGE_GIF ON)
set(SDL3IMAGE_JPG ON)
set(SDL3IMAGE_JXL OFF)
set(SDL3IMAGE_LBM OFF)
set(SDL3IMAGE_PCX OFF)
set(SDL3IMAGE_PNG ON)
set(SDL3IMAGE_PNM OFF)
set(SDL3IMAGE_QOI OFF)
set(SDL3IMAGE_SVG ON)
set(SDL3IMAGE_TGA OFF)
set(SDL3IMAGE_TIF OFF)
set(SDL3IMAGE_WEBP OFF)
set(SDL3IMAGE_XCF OFF)
set(SDL3IMAGE_XPM OFF)
set(SDL3IMAGE_XV OFF)

# fix not compiling
set(AVIF_CODEC_AOM_DECODE OFF)

add_library(lib INTERFACE)
target_link_libraries(lib INTERFACE SDL3::SDL3) 
